--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -1,13 +1,13 @@
 /*
  * ────────────────────────────────────────────────────────────────────
- *   Gradle build for the “AliExpress‑Interoperability” assignment
- *   Java 21  •  Spring Boot 3.1.5  •  SOAP + XSD + RNG + Security
+ *   Gradle build for the “AliExpress-Interoperability” assignment
+ *   Java 21  •  Spring Boot 3.1.5  •  SOAP + XSD + RNG + XML-RPC + Security
  * ────────────────────────────────────────────────────────────────────
  */
 plugins {
     id 'java'
     id 'org.springframework.boot'        version '3.1.5'
-    id 'io.spring.dependency-management' version '1.1.0'   // keep
+    id 'io.spring.dependency-management' version '1.1.0'
 }
 
 group   = 'com.interoperability'
@@ -23,39 +23,48 @@ repositories {
 }
 
 dependencies {
+    /* ── Spring stack ─────────────────────────────────────────────── */
+    implementation 'org.springframework.boot:spring-boot-starter-web'            // REST API
+    implementation 'org.springframework.boot:spring-boot-starter-web-services'   // SOAP (Spring-WS)
+    implementation 'org.springframework.boot:spring-boot-starter-security'       // Basic-Auth → later JWT
 
-    /* ── Spring stack ────────────────────────────────────────────── */
-    implementation 'org.springframework.boot:spring-boot-starter-web'            // REST
-    implementation 'org.springframework.boot:spring-boot-starter-web-services'   // SOAP  (Spring‑WS)
-    implementation 'org.springframework.boot:spring-boot-starter-security'       // Basic‑Auth (later: JWT)
 
-    /* ── WSDL generator dependency for Spring‑WS ─────────────────── */
-    implementation 'wsdl4j:wsdl4j:1.6.3'   // required by DefaultWsdl11Definition
 
-    /* ── JAXB (XML ↔ POJO) ───────────────────────────────────────── */
+    /* ── WebClient & XML parsing ─────────────────────────────────── */
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'  // for RapidAPI HTTP + reactive stack
+    implementation 'org.jdom:jdom2:2.0.6'                                // convenient XML parsing
+
+    /* ── WSDL generator for Spring-WS ─────────────────────────────── */
+    implementation 'wsdl4j:wsdl4j:1.6.3'
+
+    /* ── JAXB (XML ↔ POJO) ────────────────────────────────────────── */
     implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
     runtimeOnly   'org.glassfish.jaxb:jaxb-runtime:4.0.4'
 
-    /* ── Relax‑NG validation (Jing) ──────────────────────────────── *
-     * Exclude Saxon 8.7 to prevent “Unknown type of result: DOMResult”
-     * that breaks WSDL generation. The JDK’s TransformFactory is fine.
-     */
+    /* ── Relax-NG validation (Jing) ───────────────────────────────── */
     implementation('com.thaiopensource:jing:20091111') {
-        exclude group: 'net.sf.saxon', module: 'saxon'  // ← critical
+        // exclude Saxon to avoid conflicts with Spring-WS WSDL generation
+        exclude group: 'net.sf.saxon', module: 'saxon'
     }
 
-    /* ── Lombok ──────────────────────────────────────────────────── */
+    /* ── Lombok (annotations only) ────────────────────────────────── */
     compileOnly         'org.projectlombok:lombok:1.18.30'
     annotationProcessor 'org.projectlombok:lombok:1.18.30'
 
-    /* ── OPTIONAL: WebClient (RapidAPI calls) ────────────────────── */
-    // implementation 'org.springframework.boot:spring-boot-starter-webflux'
-
-    /* ── Tests ───────────────────────────────────────────────────── */
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    /* ── Testing ──────────────────────────────────────────────────── */
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'     // JUnit5, MockMvc, Mockito, JSON-path
+    testImplementation 'org.springframework.security:spring-security-test'     // Security filter/mocks
+    testImplementation 'org.xmlunit:xmlunit-core:2.9.1'                      // XML assertion helpers
 }
 
 tasks.withType(JavaCompile).configureEach {
-    options.encoding = 'UTF-8'
-    options.compilerArgs += ['-parameters']   // helpful for Spring reflection
+    options.encoding    = 'UTF-8'
+    options.compilerArgs += ['-parameters']   // better Spring reflection
+}
+
+test {
+    useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
 }
