krudalica na dobrom putu

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,3 +5,11 @@ rapidapi.host=ecommdatahub-aliexpress-datahub-v1.p.rapidapi.com
 rapidapi.key=93f3846d61mshcc5256d33985670p1cf43fjsn6cee94ce93e
 spring.security.user.name = admin
 spring.security.user.password = secret
+# (a) your signing secret
+jwt.secret=SomeSuperSecretKeyThatYouKeepOutOfVersionControl
+
+# (b) how long before an Access‐Token expires (in ms)
+jwt.expiration.access-ms=900000
+
+# (c) how long before a Refresh‐Token expires (in ms)
+jwt.expiration.refresh-ms=86400000
