--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -46,6 +46,9 @@ dependencies {
         // exclude Saxon to avoid conflicts with Spring-WS WSDL generation
         exclude group: 'net.sf.saxon', module: 'saxon'
     }
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly   'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly   'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
     /* ── Lombok (annotations only) ────────────────────────────────── */
     compileOnly         'org.projectlombok:lombok:1.18.30'
