--- a/client-app/build.gradle
+++ b/client-app/build.gradle
@@ -1,12 +1,12 @@
 plugins {
     id 'java'
     id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.13'
 }
 
 group = 'com.interoperability'
 version = '1.0-SNAPSHOT'
 
-// — Compile against your Java 21 installation —
 java {
     sourceCompatibility = JavaVersion.VERSION_21
     targetCompatibility = JavaVersion.VERSION_21
@@ -17,10 +17,23 @@ repositories {
 }
 
 dependencies {
+    // JavaFX
     implementation "org.openjfx:javafx-controls:20"
     implementation "org.openjfx:javafx-fxml:20"
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.3'
+    implementation 'org.apache.httpcomponents.client5:httpclient5:5.2.1' // only if you prefer Apache; current code uses JDK HttpClient
+
+    // JSON parsing
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.3'
+}
+
+javafx {
+    version = '20'
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
 application {
-    mainClass = 'hr.java.interoper.clientapp.HelloApplication'
+    mainClass = 'hr.java.interoper.clientapp.ClientApplication'
 }
+
+
