--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,15 +1,18 @@
 spring.application.name=aliexpressproject
 server.port=8100
 
-rapidapi.host=ecommdatahub-aliexpress-datahub-v1.p.rapidapi.com
-rapidapi.key=93f3846d61mshcc5256d33985670p1cf43fjsn6cee94ce93e
+rapidapi.host=aliexpress-datahub.p.rapidapi.com
+rapidapi.key=93f3846d61mshcc5256d33985670p1cf43fjsn6cee94ce93ef
+rapidapi.region=US
+rapidapi.locale=en_US
 spring.security.user.name = admin
 spring.security.user.password = secret
-# (a) your signing secret
-jwt.secret=SomeSuperSecretKeyThatYouKeepOutOfVersionControl
 
-# (b) how long before an Access‐Token expires (in ms)
+jwt.secret=V8YfhvJHu9WGE9ERh8+z3FvByyc8ZDfLrJt2qQ9xXg0=
+
+
+
 jwt.expiration.access-ms=900000
 
-# (c) how long before a Refresh‐Token expires (in ms)
+
 jwt.expiration.refresh-ms=86400000
